Cosmetic changes to create return-to-index buttons on behavior & patient create views

--- a/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/IllicitDrug/index.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/IllicitDrug/index.html.twig
@@ -31,7 +31,7 @@
         ]
     )}}
 
-    {{behaviors_menu()}}
+    {{behaviors_menu('index')}}
 
     {{ list(illicit_drug_behaviors) }}
     {{ pagination(illicit_drug_behaviors) }}    
