--- a/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/index.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/index.html.twig
@@ -27,7 +27,7 @@
         ]
     )}}
 
-    {{ behaviors_menu() }}
+    {{ behaviors_menu('index') }}
     
     {{ list(behaviors) }}
     {{ pagination(behaviors) }}    
