--- a/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/Education/index.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/Education/index.html.twig
@@ -31,7 +31,7 @@
         ]
     )}}
 
-    {{behaviors_menu()}}
+    {{behaviors_menu('index')}}
    
     {{ list(education_behaviors) }}
     {{ pagination(education_behaviors) }}    
