--- a/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/Occupation/index.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/Occupation/index.html.twig
@@ -31,7 +31,7 @@
         ]
     )}}
 
-    {{behaviors_menu()}}
+    {{behaviors_menu('index')}}
 
     {{ list(occupation_behaviors) }}
     {{ pagination(occupation_behaviors) }}    
