--- a/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/Smoking/index.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/Smoking/index.html.twig
@@ -30,7 +30,7 @@
         ]
     )}}
 
-   {{ behaviors_menu() }}
+   {{ behaviors_menu('index') }}
    
    {{ list(smoking_behaviors) }}
    {{ pagination(smoking_behaviors) }}
