--- a/src/Bundle/WebBundle/Resources/views/Backend/Activity/prototypeUpdate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Activity/prototypeUpdate.html.twig
@@ -8,8 +8,7 @@
 {% extends 'AccardWebBundle:Backend:layout.html.twig' %}
 
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import update %}
-{% from 'AccardWebBundle:Common/Macros:misc.html.twig' import pagination, page_title, statistics %}
-{% from 'AccardWebBundle:Backend/Activity:macros.html.twig' import list_fields %}
+{% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
 
 
 {% block content %}
@@ -19,6 +18,7 @@
     {{ form_errors(form) }}
 
     <form action="{{ path('accard_backend_activity_prototype_update', { id: activity_prototype.id }) }}" method="post" {{ form_enctype(form) }}>
+        {{ form_widget(form._token) }}
         <input type="hidden" name="_method" value="PUT">
         {% include 'AccardWebBundle:Backend/Activity:prototypeForm.html.twig' %}
         <div class="row">
@@ -29,6 +29,7 @@
     </form>
 
 {% endblock %}
+
 
 {% block page_javascripts %}
 
@@ -41,6 +42,9 @@
             target: 'name',
             condition: 'changed',
             action: 'slug'
+        })
+        .collection("#accard-prototype-fields", {
+          adder: $("#accard-prototype-field-adder")
         })
         .bindAll();
 </script>
