--- a/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/index.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/index.html.twig
@@ -23,7 +23,7 @@
 {% block content %}
 
    {{ page_title(
-        'accard.diagnosis.action.design'|trans,
+        'accard.diagnosis.title.index'|trans,
         [
             create(path('accard_frontend_diagnosis_create'), 'accard.diagnosis.action.create'|trans),
             designBtn
