--- a/src/Bundle/WebBundle/Resources/views/Backend/Activity/fieldUpdate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Activity/fieldUpdate.html.twig
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-    {{ page_title('accard.activity_field.field.update'|trans) }}
+    {{ page_title('accard.activity_prototype_field.action.update'|trans) }}
 
     {{ form_errors(form) }}
 
