--- a/src/Bundle/WebBundle/Resources/views/Backend/Activity/prototypeUpdate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Activity/prototypeUpdate.html.twig
@@ -13,7 +13,7 @@
 
 {% block content %}
 
-    {{ page_title('accard.activity_prototype.field.update'|trans) }}
+    {{ page_title('accard.activity_prototype.action.update'|trans) }}
 
     {{ form_errors(form) }}
 
