--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/create.html.twig
@@ -11,6 +11,9 @@
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
 {% from 'AccardWebBundle:Common/Macros:buttons.html.twig' import generic %}
 
+{% set prototype = form.vars.value.prototype is defined ? form.vars.value.prototype.name : 'default' %}
+
+
 {% block content %}
     {{ page_title('accard.activity.action.create'|trans,
         [
@@ -19,8 +22,8 @@
     ) }}
 
     {{ form_errors(form) }}
-    
-    <form action="{{ path('accard_frontend_activity_create') }}" method="post" {{ form_enctype(form) }}>
+
+    <form action="{{ path('accard_frontend_activity_create', { prototype: prototype }) }}" method="post" {{ form_enctype(form) }}>
         {{ form_widget(form._token) }}
         {% include 'AccardWebBundle:Frontend/Activity:form.html.twig' %}
         <div class="row">
