--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/form.html.twig
@@ -5,4 +5,27 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
-{{ form_row(form) }}
+{% from 'AccardWebBundle:Common/Macros:form.html.twig' import select_patient %}
+
+{% macro prototype(field) %}
+<div class="form-group">
+    {{ form_widget(field) }}
+</div>
+{% endmacro %}
+
+<div class="row">
+    <div class="col-md-12">
+        {{ select_patient(form.patient) }}
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6 row-split">
+        {{ form_row(form.diagnosis) }}
+        {{ form_row(form.activityDate) }}
+    </div>
+    <div class="col-md-6">
+    {% for field in form.fields %}
+        {{ _self.prototype(field) }}
+    {% endfor %}
+    </div>
+</div>
