--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/update.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/update.html.twig
@@ -10,12 +10,14 @@
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import update %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
 
+{% set prototype = form.vars.value.prototype is defined ? form.vars.value.prototype.name : 'default' %}
+
 {% block content %}
-    {{ page_title('accard.interface.frontend.titles.update_activity'|trans) }}
+    {{ page_title('accard.activity.title.update'|trans) }}
 
     {{ form_errors(form) }}
     
-    <form action="{{ path('accard_frontend_activity_update', { id: activity.id }) }}" method="post" {{ form_enctype(form) }}>
+    <form action="{{ path('accard_frontend_activity_update', { prototype: prototype, id: activity.id }) }}" method="post" {{ form_enctype(form) }}>
         <input type="hidden" name="_method" value="PUT">
         {{ form_widget(form._token) }}
         {% include 'AccardWebBundle:Frontend/Activity:form.html.twig' %}
