--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/form.html.twig
@@ -6,8 +6,13 @@
 {# file that was distributed with this source code. #}
 
 {% set count = form.fields|length %}
-{% set row1fields = form.fields|slice(0, count/2) %}
-{% set row2fields = form.fields|slice(count/2, count) %}
+
+{% if count > 0 %}
+    {% set row1fields = form.fields|slice(0, count/2) %}
+{% endif %}
+{% if count > 1 %}
+    {% set row2fields = form.fields|slice(count/2, count) %}
+{% endif %}
 
 <div class="row">
     <div class="col-md-12">
@@ -50,12 +55,12 @@
     <div class="tab-pane fade" id="patient-custom">
         <div class="row">
             <div class="col-md-6">
-            {% for field in row1fields %}
+            {% for field in row1fields if count > 0 %}
                 {{ render_field(field) }}
             {% endfor %}
             </div>
             <div class="col-md-6">
-            {% for field in row2fields %}
+            {% for field in row2fields if count > 1 %}
                 {{ render_field(field) }}
             {% endfor %}
             </div>
