--- a/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/create.html.twig
@@ -10,6 +10,7 @@
 
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import create %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
+{% from 'AccardWebBundle:Common/Macros:form.html.twig' import select_patient_js, select_patient_css %}
 
 {% block content %}
     {{ page_title('accard.diagnosis.action.create'|trans)}}
@@ -26,4 +27,14 @@
         </div>
     </form>
 
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ select_patient_js('#accard_diagnosis_patient') }}
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ select_patient_css() }}
 {% endblock %}
